[package]
name = "nerf-exchanges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_with = "1.14.0"
nerf = { version = "0.1", path = "../nerf" }
nerf-macros = { version = "0.1", path = "../nerf-macros" }
rust_decimal = "1.25.0"
hyper = "0.14.19"
thiserror = "1.0.31"
serde_json = "1.0.81"
serde_urlencoded = "0.7.1"
tower = "0.4.13"
pin-project = "1.0.10"
hmac = "0.12.1"
sha2 = "0.10.2"
chrono = { version = "0.4.19", features = ["serde"] }
tracing = "0.1.35"

[dev-dependencies]
anyhow = "1.0.58"
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
hyper-tls = "0.5.0"
nerf = { path = "../nerf" }
