[package]
name = "nerf-exchanges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_with = "2.1.0"
nerf = { version = "0.1", path = "../nerf" }
rust_decimal = "1.25.0"
hyper = "0.14.19"
thiserror = "1.0.31"
serde_json = "1.0.81"
serde_urlencoded = "0.7.1"
tower = { version = "0.4.13", features = ["util", "buffer"] }
pin-project = "1.0.10"
hmac = "0.12.1"
sha2 = "0.10.2"
chrono = { version = "0.4.19", features = ["serde"] }
tracing = "0.1.35"
jwt = "0.16.0"
http = "0.2.8"
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[dev-dependencies]
anyhow = "1.0.58"
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
hyper-tls = "0.5.0"
criterion = "0.4.0"
rust_decimal_macros = "1.26.1"

[[bench]]
name = "binance_serde"
harness = false
