[package]
name = "nerf-extras"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
form_urlencoded = "1.0.1"
futures = "0.3.23"
hyper = "0.14.20"
nerf = { version = "0.1.0", path = "../nerf" }
nerf-exchanges = { version = "0.1.0", path = "../nerf-exchanges" }
rust_decimal = "1.25.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
serde_urlencoded = { git = "https://github.com/cr0sh/serde_urlencoded.git", rev = "cf920b9c30a745b4c5132c94c099df61d767cb8b"}
serde_with = "2.0.0"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["rt", "time"] }
tower-service = "0.3.2"
tracing = "0.1.36"

[dev-dependencies]
hyper-tls = "0.5.0"
tokio = { version = "1.20.1", features = ["rt", "test-util", "macros"] }
tower = "0.4.13"
tracing-subscriber = "0.3.15"
