[package]
name = "nerf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
http = "0.2.8"
reqwest = { version = "0.11.11", optional = true }
nerf-macros = { version = "0.1.0", path = "../nerf-macros" }
serde = "1.0.137"
hyper = "0.14.19"
tower = "0.4.13"
thiserror = "1.0.31"
pin-project = "1.0.10"
serde_with = "1.14.0"
serde_json = "1.0.81"
serde_urlencoded = "0.7.1"
bytes = "1.1.0"

[dev-dependencies]
anyhow = "1.0.58"
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
nerf-exchanges = { path = "../nerf-exchanges" }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
hyper-tls = "0.5.0"

[features]
default = ["reqwest_client"]
reqwest_client = ["reqwest"]