[package]
name = "nerf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
http = "0.2.8"
nerf-macros = { version = "0.1.0", path = "../nerf-macros" }
serde = "1.0.137"
hyper = "0.14.19"
tower = "0.4.13"
thiserror = "1.0.31"
pin-project = "1.0.10"
serde_with = "1.14.0"
serde_json = "1.0.81"
serde_urlencoded = "0.7.1"
bytes = "1.1.0"
tracing = "0.1.35"
nerf-exchanges = { git = "https://github.com/cr0sh/nerf.git", rev = "c7d8f887802376ed0ead9009d50cc9d684b5f967", optional = true }
nerf-extras = { git = "https://github.com/cr0sh/nerf.git", rev = "c7d8f887802376ed0ead9009d50cc9d684b5f967", optional = true }

[features]
default = ["exchanges", "extras"]
exchanges = ["nerf-exchanges"]
extras = ["nerf-extras"]

[dev-dependencies]
axum = "0.5.13"
dashmap = "5.3.4"
futures = "0.3.21"
http-body = "0.4.5"
tokio = { version = "1.20.0", features = ["macros"] }
tokio-stream = "0.1.9"
tracing-subscriber = "0.3.15"
